--- a/login.html
+++ b/login.html
@@ -12,6 +12,9 @@
             font-family: 'Tajawal', sans-serif;
             background-color: #f5f7fa;
         }
+        .login-container {
+            min-height: 100vh;
+        }
     </style>
 </head>
 <body class="flex items-center justify-center min-h-screen">
@@ -21,7 +24,7 @@
             <div>
                 <label for="email" class="block text-sm font-medium text-gray-700">البريد الإلكتروني</label>
                 <div class="mt-1">
-                    <input id="email" name="email" type="email" required
+                    <input id="email" name="email" type="email" autocomplete="email" required
                            class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm text-right"
                            placeholder="أدخل بريدك الإلكتروني">
                 </div>
@@ -29,12 +32,12 @@
             <div>
                 <label for="password" class="block text-sm font-medium text-gray-700">كلمة المرور</label>
                 <div class="mt-1">
-                    <input id="password" name="password" type="password" required
+                    <input id="password" name="password" type="password" autocomplete="current-password" required
                            class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm text-right"
                            placeholder="أدخل كلمة المرور">
                 </div>
             </div>
-            <div id="feedbackMessage" class="hidden text-center mt-4"></div>
+            <div id="feedbackMessage" class="hidden text-center mt-4 text-sm"></div>
             <div>
                 <button type="submit"
                         class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
@@ -43,14 +46,9 @@
             </div>
         </form>
         <div class="mt-6 text-center">
-            <a href="reset_password.html" class="font-medium text-blue-600 hover:text-blue-500 text-sm">
-                نسيت كلمة المرور؟
-            </a>
-        </div>
-        <div class="mt-2 text-center">
             <p class="text-sm text-gray-600">
                 ليس لديك حساب؟
-                <a href="login_page.html" class="font-medium text-blue-600 hover:text-blue-500">
+                <a href="registration.html" class="font-medium text-blue-600 hover:text-blue-500">
                     إنشاء حساب جديد
                 </a>
             </p>
@@ -59,6 +57,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+        import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
         import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
         // **1. تهيئة Firebase**
@@ -71,8 +70,8 @@
             appId: "1:768887356636:web:11ec1d6991add3309c8819",
             measurementId: "G-98GQGZS09W"
         };
-
         const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
         const auth = getAuth(app);
 
         // **2. ربط عناصر الواجهة بمتغيرات في الكود**
@@ -81,7 +80,7 @@
         const emailInput = document.getElementById('email');
         const passwordInput = document.getElementById('password');
 
-        // **3. دالة تسجيل الدخول**
+        // **3. دالة تسجيل الدخول والتحقق من نوع الحساب**
         loginForm.addEventListener('submit', async (e) => {
             e.preventDefault();
             const email = emailInput.value;
@@ -92,26 +91,41 @@
             feedbackMessage.textContent = '';
 
             try {
-                // تسجيل الدخول باستخدام Firebase Auth
+                // تسجيل الدخول باستخدام البريد الإلكتروني وكلمة المرور
                 const userCredential = await signInWithEmailAndPassword(auth, email, password);
                 const user = userCredential.user;
+                const uid = user.uid;
 
-                // التحقق من أن الحساب مفعل (تم التحقق من البريد الإلكتروني)
-                if (!user.emailVerified) {
+                // التحقق من نوع الحساب في Firestore
+                const employeeDocRef = doc(db, "employees", uid);
+                const employerDocRef = doc(db, "employers", uid);
+
+                const employeeDoc = await getDoc(employeeDocRef);
+                const employerDoc = await getDoc(employerDocRef);
+
+                let redirectUrl = '';
+
+                if (employeeDoc.exists()) {
+                    redirectUrl = 'employee_dashboard.html';
+                } else if (employerDoc.exists()) {
+                    redirectUrl = 'employer_dashboard.html';
+                } else {
+                    // إذا لم يتم العثور على المستخدم في أي مجموعة
                     feedbackMessage.classList.remove('hidden');
                     feedbackMessage.classList.add('text-red-500');
-                    feedbackMessage.textContent = 'الرجاء التحقق من بريدك الإلكتروني لتفعيل الحساب.';
-                    auth.signOut(); // تسجيل الخروج لمنع الوصول قبل التفعيل
+                    feedbackMessage.textContent = 'حدث خطأ في بيانات المستخدم. يرجى التواصل مع الدعم.';
                     return;
                 }
 
-                // عرض رسالة نجاح وتوجيه المستخدم إلى صفحة أخرى
+                // عرض رسالة نجاح ثم إعادة التوجيه
                 feedbackMessage.classList.remove('hidden', 'text-red-500');
                 feedbackMessage.classList.add('text-green-500');
-                feedbackMessage.textContent = 'تم تسجيل الدخول بنجاح! جاري التوجيه...';
+                feedbackMessage.textContent = 'تم تسجيل الدخول بنجاح! جارٍ التوجيه...';
 
-                // يمكنك تعديل هذا الرابط ليتناسب مع صفحتك الرئيسية
-                window.location.href = 'index.html'; 
+                // إعادة توجيه المستخدم بعد 2 ثانية
+                setTimeout(() => {
+                    window.location.href = redirectUrl;
+                }, 2000);
 
             } catch (error) {
                 // عرض رسائل خطأ مفصلة
@@ -119,10 +133,11 @@
                 feedbackMessage.classList.add('text-red-500');
                 
                 switch (error.code) {
-                    case 'auth/invalid-email':
-                    case 'auth/user-not-found':
-                    case 'auth/wrong-password':
+                    case 'auth/invalid-credential':
                         feedbackMessage.textContent = 'البريد الإلكتروني أو كلمة المرور غير صحيحة.';
+                        break;
+                    case 'auth/user-disabled':
+                        feedbackMessage.textContent = 'تم تعطيل حسابك. يرجى التواصل مع الدعم.';
                         break;
                     default:
                         feedbackMessage.textContent = 'حدث خطأ غير متوقع. يرجى المحاولة لاحقًا.';
