--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
         <div class="mt-6 text-center">
             <p class="text-sm text-gray-600">
                 ليس لديك حساب؟
-                <a href="registration.html" class="font-medium text-blue-600 hover:text-blue-500">
+                <a href="login_page.html" class="font-medium text-blue-600 hover:text-blue-500">
                     إنشاء حساب جديد
                 </a>
             </p>
