--- a/index.html
+++ b/index.html
@@ -351,7 +351,9 @@
                         <li><a href="job_listing_page.html" class="text-gray-400 hover:text-white">الوظائف</a></li>
                         <li><a href="employee_listing_page.html" class="text-gray-400 hover:text-white">البحث عن موظفين</a></li>
                         <li><a href="job_application_page.html" class="text-gray-400 hover:text-white">تسجيل موظف</a></li>
-                    </ul>
+
+                          <li><a href="employee_chats.html" class="text-gray-400 hover:text-white">الرسائل </a></li>
+                            </ul>
                 </div>
                 <div>
                     <h3 class="text-lg font-bold mb-4">تواصل معنا</h3>
