--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                            placeholder="أدخل كلمة مرورك">
                 </div>
                 <div class="text-left mt-2">
-                    <a href="forgot-password.html" class="font-medium text-blue-600 hover:text-blue-500 text-sm">
+                    <a href="reset_password.html" class="font-medium text-blue-600 hover:text-blue-500 text-sm">
                         هل نسيت كلمة السر؟
                     </a>
                 </div>
