--- a/reset_password.html
+++ b/reset_password.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,81 @@
         body {
             font-family: 'Tajawal', sans-serif;
         }
+
+        /* تنسيقات الشاشة المنبثقة */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.6);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            padding: 40px;
+            border-radius: 12px;
+            text-align: center;
+            max-width: 400px;
+            width: 90%;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            position: relative;
+            transform: scale(0.95);
+            opacity: 0;
+            transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+        }
+
+        .modal.active .modal-content {
+            transform: scale(1);
+            opacity: 1;
+        }
+
+        /* تنسيقات علامة الصح المتحركة */
+        .checkmark-circle {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            display: inline-block;
+            stroke-width: 4;
+            stroke: #2563eb;
+            stroke-miterlimit: 10;
+            margin-bottom: 20px;
+            box-shadow: inset 0px 0px 0px #2563eb;
+            animation: fill 0.4s ease-in-out 0.4s forwards,
+                       scale 0.3s ease-in-out 0.9s both;
+        }
+
+        .checkmark-path {
+            stroke-dasharray: 166;
+            stroke-dashoffset: 166;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+            animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+        }
+
+        @keyframes stroke {
+            100% {
+                stroke-dashoffset: 0;
+            }
+        }
+        @keyframes scale {
+            0%, 100% {
+                transform: none;
+            }
+            50% {
+                transform: scale3d(1.1, 1.1, 1);
+            }
+        }
+        @keyframes fill {
+            100% {
+                box-shadow: inset 0px 0px 0px 50px #2563eb;
+            }
+        }
     </style>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
@@ -21,12 +96,13 @@
             <p class="text-gray-600 mt-2">لا تقلق، يحدث ذلك للجميع. أدخل بريدك الإلكتروني وسنرسل لك رابطًا لإعادة تعيين كلمة المرور.</p>
         </div>
 
-        <form>
+        <form id="resetPasswordForm">
             <div class="mb-6">
                 <label for="email" class="block text-gray-700 font-bold mb-2">البريد الإلكتروني</label>
                 <input type="email" id="email" name="email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="أدخل بريدك الإلكتروني" required>
             </div>
-            
+            <div id="feedbackMessage" class="hidden text-center mt-4 text-red-500"></div>
+
             <button type="submit" class="w-full bg-blue-600 text-white font-bold py-3 px-4 rounded-lg hover:bg-blue-700 transition duration-300">
                 إرسال رابط استعادة كلمة المرور
             </button>
@@ -38,5 +114,88 @@
             </a>
         </div>
     </div>
+
+    <div id="successModal" class="modal">
+        <div class="modal-content">
+            <svg class="checkmark-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                <circle class="checkmark-circle" cx="26" cy="26" r="25" fill="none"/>
+                <path class="checkmark-path" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+            </svg>
+            <h2 class="text-2xl font-bold text-gray-800 mt-4">تم الإرسال بنجاح!</h2>
+            <p class="text-gray-600 mt-2">يرجى التحقق من بريدك الإلكتروني للحصول على رابط إعادة تعيين كلمة المرور.</p>
+            <p class="text-sm text-red-500 mt-4">ملاحظة: قد تستغرق الرسالة بضع دقائق للوصول.</p>
+            <button id="closeModalBtn" class="mt-8 bg-blue-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-blue-700 transition duration-300">
+                موافق
+            </button>
+        </div>
+    </div>
+
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+        import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+
+        // **1. تهيئة Firebase بنفس الإعدادات السابقة **
+        const firebaseConfig = {
+            apiKey: "AIzaSyBsIaCjE7QOQ6QkhqhCIMA3sLdMvxBxPHk",
+            authDomain: "shaglni-c64c0.firebaseapp.com",
+            projectId: "shaglni-c64c0",
+            storageBucket: "shaglni-c64c0.firebasestorage.app",
+            messagingSenderId: "768887356636",
+            appId: "1:768887356636:web:11ec1d6991add3309c8819",
+            measurementId: "G-98GQGZS09W"
+        };
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+
+        // **2. ربط عناصر الواجهة بمتغيرات في الكود**
+        const resetPasswordForm = document.getElementById('resetPasswordForm');
+        const emailInput = document.getElementById('email');
+        const feedbackMessage = document.getElementById('feedbackMessage');
+        const successModal = document.getElementById('successModal');
+        const closeModalBtn = document.getElementById('closeModalBtn');
+
+        // **3. دالة معالجة إرسال رابط إعادة تعيين كلمة المرور**
+        resetPasswordForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const email = emailInput.value;
+
+            feedbackMessage.classList.add('hidden');
+            feedbackMessage.textContent = '';
+
+            try {
+                await sendPasswordResetEmail(auth, email);
+
+                // إظهار الشاشة المنبثقة عند النجاح
+                successModal.style.display = 'flex';
+                // تأخير بسيط لتفعيل الانتقال (transition)
+                setTimeout(() => {
+                    successModal.classList.add('active');
+                }, 10);
+
+            } catch (error) {
+                feedbackMessage.classList.remove('hidden');
+                switch (error.code) {
+                    case 'auth/invalid-email':
+                        feedbackMessage.textContent = 'صيغة البريد الإلكتروني غير صحيحة.';
+                        break;
+                    case 'auth/user-not-found':
+                        feedbackMessage.textContent = 'لا يوجد مستخدم مسجل بهذا البريد الإلكتروني.';
+                        break;
+                    default:
+                        feedbackMessage.textContent = 'حدث خطأ غير متوقع. يرجى المحاولة لاحقًا.';
+                        console.error("خطأ إعادة التعيين:", error);
+                        break;
+                }
+            }
+        });
+
+        // إخفاء الشاشة المنبثقة عند الضغط على الزر
+        closeModalBtn.addEventListener('click', () => {
+            successModal.classList.remove('active');
+            setTimeout(() => {
+                successModal.style.display = 'none';
+            }, 300); // يجب أن يتوافق هذا مع مدة الانتقال في CSS
+        });
+    </script>
 </body>
 </html>
